# morszczuk

./: .gitignore  Dockerfile  Pipfile  manage.py  package-lock.json  package.json  pyproject.toml  readme.md  webpack.config.js
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
core/: views.py
items/: admin.py  models.py  urls.py  views.py
locations/: models.py  urls.py  views.py
locations/migrations/: 0001_initial.py
morszczuk/: settings.py  urls.py  wsgi.py
templates/categories/: category_detail.html  category_list.html
templates/core/: base.html  index.html
templates/core/snippets/: _item_list_simple.html  _menu.html  _menu_item.html
templates/items/: base.html  collection_detail.html  collection_list.html  item_confirm_delete.html  item_detail.html  item_form.html  item_list.html
templates/locations/: location_detail.html  location_form.html  location_list.html
templates/registration/: login.html
